--- a/popup.html
+++ b/popup.html
@@ -1,7 +1,7 @@
 <html>
 
  <head>
-  <title>OHR - onHeadersReceived checker popup_tag(230827:22h:07)</title>
+  <title>OHR - onHeadersReceived checker popup_tag(230828:21h:56)</title>
   <meta    id="meta_http_equiv"   http-equiv="content-type"  content="text/html" charset="utf-8">
   <script src="popup.js"></script>
  </head>
@@ -11,45 +11,96 @@
   /* LAYOUT */
   html   {           height : min-content; }
   pre    {            width :        30ch; }
-  pre    {            margin:    2em auto; }
+  pre    {            margin:  0.5em auto; }
 
   /* COLOR */
   body   {            color :      Salmon; }
   body   { background-color :    DarkBlue; }
   button {            color :         Red; }
-  button {        font-size :        150%; }
+  button {        font-size :        18px; }
 
   /* TEXT */
-  body   {        font-size :        150%; }
+  body   {        font-size :        18px; }
   body   {       text-align :      center; }
   pre    {      white-space :    pre-line; }
   div    {       text-align :        left; }
 
   em     {      white-space :      nowrap; }
 
+  .container {
+    display                 : inline-grid;
+    padding                 : 0;
+  }
+
+  .container>* {
+    text-align              : center;
+  }
+
+  button {
+    border-radius           : 1em;
+    padding                 : 0 1em;
+/*
+    width                   : 100%;
+*/
+    text-align              : center;
+    margin                  : auto;
+  }
+
+  label {
+   display                  : inline-block;
+   padding                  : 0.1em 1.0em;
+   border                   : 2px solid #DDD8;
+   border-radius            : 1.0em;
+/*
+   margin                   : 0.5em auto;
+*/
+   user-select              : none;
+   cursor                   : pointer;
+   color                    : gray;
+  }
+
+  label:has( input[type="checkbox"]:checked ) {
+     background-color       : #001;
+     border-color           : red;
+     color                  : red;
+  }
+
+  label:has( input[type="radio"]:checked ) {
+     background-color       : #001;
+     border-color           : white;
+     color                  : white;
+  }
+
  </style>
 
  <body>
 
-   <h1              >ORH Checker   </h1>
+   <h2>ORH Checker</h2>
 
-   <b  id="manifest">              </b>
+   <b id="manifest">●</b>
 
-   <pre>
-     Reload current page to
-     check <b>onHeadersReceived</b>
-     event details
-     in <i>DevTools console</i>
-   </pre>
+<pre>Reload current page to
+check <b>onHeadersReceived</b>
+event details
+in <i>DevTools console</i></pre>
 
-   <button id="reload_page" disabled>Reload Page</button>
+   <div class="container">
+    <button disabled                                                id="reload_page" type="button">Reload Page</button>
    <br>
-
+    <label title="● just log content-script command
+● in Content-Page's Devtools console
+✔ Works fine with Chrome and Edge
+ ✕ but nothing happens in Opera ?!"
+           for="logging">just logging<input                         id ="logging"    type="checkbox"/> </label>
+   <br>
+    <label for="assign" >assign      <input         name="location" id="assign"      type="radio"   /> </label>
+    <label for="replace">replace     <input         name="location" id="replace"     type="radio"   /> </label>
+    <label for="reload" >reload      <input checked name="location" id="reload"      type="radio"   /> </label>
    <div>
-    <em    id="last_tabId"> </em>
-    <br>
-    <em    id="last_url"  > </em>
-   </div>
+
+   <em    id="last_tabId"> </em>
+
+   <em    id="last_url"  > </em>
 
  </body>
 
